--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,12 @@
+=========== Week 16 ===========
+Tue Apr 20:
+	* added raycasting for entities.
+
 =========== Week 15 ===========
+Sun Apr 18:
+	* rendering entities as unknown tile.
+	* SITGL SIT_PROGRESS fixes, doc continued (added css used for each control).
+
 Sat Apr 17:
 	* started boilerplate for rendering entities.
 	* bug fixed in particle emitter list when moving to another sub-chunk.
